# PiHID-over-WIFI

./: .gitignore  LICENSE  auto_pi_sender.sh  pi_sender.c  pyhid.py  windows_server.c
client/: auto_pi_client.sh  pi_client.c
dev_hid_composite/: CMakeLists.txt  hid_handler.c  hid_handler.h  main.c  udp_server.c  udp_server.h
hid-over-wifi/: CMakeLists.txt  hid_server.c  hid_server.h  lwipopts.h  main.c  tusb_config.h  usb_descriptors.c
pihidfi/: CMakeLists.txt  hid_server.c  hid_server.h  lwipopts.h  pihidfi.c  tusb_config.h  usb_descriptors.c
udp-test/: CMakeLists.txt  udp-test.c
windows_server/: common.c  common.h  input_handler.c  input_handler.h  linux_to_windows.c  linux_to_windows.h  windows_server.c
